tests/contract_testcases/polkadot/functions/constructors_01.sol

        contract test {
            constructor() virtual {}
        }
// ---- Expect: diagnostics ----
// error: 3:13-34: constructors cannot be declared 'virtual'
